libs/extractor/src/snapshots/extractor__tests__negative_props.snap
---
source: libs/extractor/src/lib.rs
expression: "ToBTreeSet::from(extract(\"test.jsx\",\nr\"import {Box} from '@devup-ui/core'\n        <Box zIndex={-1} />\n        \",\nExtractOption\n{\n    package: \"@devup-ui/core\".to_string(), css_dir:\n    \"@devup-ui/core\".to_string(), single_css: true, import_main_css: false,\n    import_aliases: HashMap::new()\n}).unwrap())"
---
ToBTreeSet {
    styles: {
        Static(
            ExtractStaticStyle {
                property: "z-index",
                value: "-1",
                level: 0,
                selector: None,
                style_order: None,
                layer: None,
            },
        ),
    },
    code: "import \"@devup-ui/core/devup-ui.css\";\n<div className=\"OLz_dindex-v_d1\" />;\n",
}
